--- a/src/app/pages/sale/forms/form-sale-detail/form-sale-detail.component.html
+++ b/src/app/pages/sale/forms/form-sale-detail/form-sale-detail.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="typeService?.includes('mobile')">
-  <app-form-mobile></app-form-mobile>
+  <app-form-mobile #mobileForm [submitted]="submitted" [listOperators]="listOperators"></app-form-mobile>
 </div>
 
 <div *ngIf="typeService?.includes('fixed')">
@@ -58,19 +58,26 @@
     </div>
   </div>  
   <div class="row">
-    <div class="col-12 mb-3" *ngIf="'FORMS.FIELD_NAMES.direction.label' | translate as translatedLabel;">
+    <div class="col-lg-2 mb-3" *ngIf="'FORMS.FIELD_NAMES.different_address.label' | translate as translatedLabel;">
+      <label for="is_other_address" class="form-label w-100">¿{{translatedLabel}}?</label>
+      <ui-switch id="is_other_address" name="is_other_address" color="#556ee6" formControlName="is_other_address" uncheckedLabel="No" checkedLabel="Si" size="small" class="me-1 w-100"></ui-switch>
+    </div>
+    <div class="col-lg-10 mb-3" *ngIf="saleDetailForm.get('is_other_address').value && 'FORMS.FIELD_NAMES.direction.label' | translate as translatedLabel;">
       <label for="instalaciones_id" class="form-label">{{translatedLabel}}</label>
-      <ng-select 
-        class="w-100"
-        [items]="tmpListInstallationOptions"
-        [bindValue]="'id'"
-        [bindLabel]="'direccion_completo'"
-        [multiple]="false"
-        [notFoundText]="'No se encontraron elementos'"
-        formControlName="instalaciones_id"
-        (search)="apiTempInstallationSearch($event.term)">
-        
-      </ng-select>
+      <div class="input-group">
+        <ng-select 
+          class="w-auto flex-grow-1"
+          [items]="tmpListInstallationOptions"
+          [bindValue]="'id'"
+          [bindLabel]="'direccion_completo'"
+          [multiple]="false"
+          [notFoundText]="'No se encontraron elementos'"
+          formControlName="instalaciones_id"
+          (search)="apiTempInstallationSearch($event.term)">
+        </ng-select>
+        <button type="button" class="btn btn-primary"><i class="mdi mdi-plus me-1"></i> {{'FORMS.BUTTONS.ADD' | translate}}</button>
+      </div>
+      
     </div>
   </div>
 </form>
