--- a/src/app/pages/maintenance/product/product.component.html
+++ b/src/app/pages/maintenance/product/product.component.html
@@ -116,6 +116,28 @@
   <form (keydown.enter)="$event.preventDefault()" [formGroup]="productForm" autocomplete="off">
     <div class="modal-body">
       <input type="hidden" name="id" value="" formControlName="id" />
+
+      <div class="row g-2">
+        <div class="col-md-4 mb-3" *ngIf="'FORMS.FIELD_NAMES.product_type.label' | translate as translatedLabel;">
+          <label for="is_info_producto" class="form-label w-100">{{translatedLabel}}</label>
+          <ui-switch id="is_info_producto" name="is_info_producto" color="#556ee6" [(ngModel)]="isInfoProduct" (change)="onChangeTypeProduct($event)" formControlName="is_info_producto" uncheckedLabel="Producto" checkedLabel="Servicio" size="small" class="me-1 w-100"></ui-switch>
+        </div>
+        <div class="col-md-8 mb-3" *ngIf="isInfoProduct && 'FORMS.FIELD_NAMES.type_service.label' | translate as translatedLabel;">
+          <label for="tipo_servicios_id" class="form-label">{{translatedLabel}} *</label>
+          <ng-select id="tipo_servicios_id" formControlName="tipo_servicios_id" [ngClass]="{ 'is-invalid': form.tipo_servicios_id.errors && (form.tipo_servicios_id.dirty || form.tipo_servicios_id.touched || submitted) }">
+            <ng-option [value]="''">{{'FORMS.FIELD_NAMES.category.default_option' | translate}}</ng-option>
+            <ng-option *ngFor="let service of listServices" [value]="service.id">{{service.nombre}}</ng-option>
+          </ng-select>
+          <div *ngIf="form.tipo_servicios_id.errors && (form.tipo_servicios_id.dirty || form.tipo_servicios_id.touched || submitted)" class="invalid-feedback" align="left">
+            <div *ngIf="form.tipo_servicios_id.errors.required">
+              {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
+            </div>
+            <div *ngIf="form.tipo_servicios_id.errors.min">
+              {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.tipo_servicios_id.errors.min.requiredLength}}
+            </div>
+          </div>
+        </div>
+      </div>
      
       <div class="mb-3" *ngIf="'FORMS.FIELD_NAMES.category.label' | translate as translatedLabel;">
         <label for="categorias_id" class="form-label">{{translatedLabel}} *</label>
@@ -133,38 +155,22 @@
         </div>
       </div>
 
-      <div class="row g-2">
-        <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.type_service.label' | translate as translatedLabel;">
-          <label for="tipo_servicios_id" class="form-label">{{translatedLabel}} *</label>
-          <ng-select id="tipo_servicios_id" formControlName="tipo_servicios_id" [ngClass]="{ 'is-invalid': form.tipo_servicios_id.errors && (form.tipo_servicios_id.dirty || form.tipo_servicios_id.touched || submitted) }">
-            <ng-option [value]="''">{{'FORMS.FIELD_NAMES.category.default_option' | translate}}</ng-option>
-            <ng-option *ngFor="let service of listServices" [value]="service.id">{{service.nombre}}</ng-option>
-          </ng-select>
-          <div *ngIf="form.tipo_servicios_id.errors && (form.tipo_servicios_id.dirty || form.tipo_servicios_id.touched || submitted)" class="invalid-feedback" align="left">
-            <div *ngIf="form.tipo_servicios_id.errors.required">
-              {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
-            </div>
-            <div *ngIf="form.tipo_servicios_id.errors.min">
-              {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.tipo_servicios_id.errors.min.requiredLength}}
-            </div>
+      <div class="mb-3" *ngIf="'FORMS.FIELD_NAMES.brand.label' | translate as translatedLabel;">
+        <label for="marcas_id" class="form-label">{{translatedLabel}} *</label>
+        <ng-select id="marcas_id" formControlName="marcas_id" [ngClass]="{ 'is-invalid': form.marcas_id.errors && (form.marcas_id.dirty || form.marcas_id.touched || submitted) }">
+          <ng-option [value]="''">{{'FORMS.FIELD_NAMES.brand.default_option' | translate}}</ng-option>
+          <ng-option *ngFor="let brand of listBrands" [value]="brand.id">{{brand.nombre}}</ng-option>
+        </ng-select>
+        <div *ngIf="form.marcas_id.errors && (form.marcas_id.dirty || form.marcas_id.touched || submitted)" class="invalid-feedback" align="left">
+          <div *ngIf="form.marcas_id.errors.required">
+            {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
           </div>
-        </div>
-        <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.brand.label' | translate as translatedLabel;">
-          <label for="marcas_id" class="form-label">{{translatedLabel}} *</label>
-          <ng-select id="marcas_id" formControlName="marcas_id" [ngClass]="{ 'is-invalid': form.marcas_id.errors && (form.marcas_id.dirty || form.marcas_id.touched || submitted) }">
-            <ng-option [value]="''">{{'FORMS.FIELD_NAMES.brand.default_option' | translate}}</ng-option>
-            <ng-option *ngFor="let brand of listBrands" [value]="brand.id">{{brand.nombre}}</ng-option>
-          </ng-select>
-          <div *ngIf="form.marcas_id.errors && (form.marcas_id.dirty || form.marcas_id.touched || submitted)" class="invalid-feedback" align="left">
-            <div *ngIf="form.marcas_id.errors.required">
-              {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
-            </div>
-            <div *ngIf="form.marcas_id.errors.min">
-              {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.marcas_id.errors.min.requiredLength}}
-            </div>
+          <div *ngIf="form.marcas_id.errors.min">
+            {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.marcas_id.errors.min.requiredLength}}
           </div>
         </div>
       </div>
+
       <div class="mb-3" *ngIf="'FORMS.FIELD_NAMES.name.label' | translate as translatedLabel;">
         <label for="nombre" class="form-label">{{translatedLabel}} *</label>
         <input type="text" id="nombre" class="form-control" placeholder="{{'FORMS.FIELD_NAMES.name.placeholder' | translate}}" formControlName="nombre" [ngClass]="{ 'is-invalid': form['nombre'].errors && (form.nombre.dirty || form.nombre.touched || submitted) }" />
