--- a/src/app/pages/maintenance/promotion/promotion.component.html
+++ b/src/app/pages/maintenance/promotion/promotion.component.html
@@ -118,21 +118,43 @@
   <form (keydown.enter)="$event.preventDefault()" [formGroup]="promotionForm" autocomplete="off">
     <div class="modal-body">
       <input type="hidden" name="id" value="" formControlName="id" />
-      <div class="mb-3" *ngIf="'FORMS.FIELD_NAMES.type_service.label' | translate as translatedLabel;">
-        <label for="tipo_servicios_id" class="form-label">{{translatedLabel}} *</label>
-        <select class="form-select custom-select" id="tipo_servicios_id" formControlName="tipo_servicios_id" [ngClass]="{ 'is-invalid': form.tipo_servicios_id.errors && (form.tipo_servicios_id.dirty || form.tipo_servicios_id.touched || submitted) }">
-          <option value="">{{'FORMS.FIELD_NAMES.type_service.default_option' | translate}}</option>
-          <option *ngFor="let service of listServices" [value]="service.id">{{service.nombre}}</option>
-        </select>
-        <div *ngIf="form.tipo_servicios_id.errors && (form.tipo_servicios_id.dirty || form.tipo_servicios_id.touched || submitted)" class="invalid-feedback" align="left">
-          <div *ngIf="form.tipo_servicios_id.errors.required">
-            {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
-          </div>
-          <div *ngIf="form.tipo_servicios_id.errors.min">
-            {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.tipo_servicios_id.errors.min.requiredLength}}
+      <div class="row g-2">
+        <div class="col-md-4 mb-3" *ngIf="'FORMS.FIELD_NAMES.product_type.label' | translate as translatedLabel;">
+          <label for="is_info_producto" class="form-label w-100">{{translatedLabel}}</label>
+          <ui-switch id="is_info_producto" name="is_info_producto" color="#556ee6" [(ngModel)]="isInfoProduct" (change)="onChangeTypeProduct($event)" formControlName="is_info_producto" uncheckedLabel="Producto" checkedLabel="Servicio" size="small" class="me-1 w-100"></ui-switch>
+        </div>
+        <div class="col-md-8 mb-3" *ngIf="isInfoProduct && 'FORMS.FIELD_NAMES.type_service.label' | translate as translatedLabel;">
+          <label for="tipo_servicios_id" class="form-label">{{translatedLabel}} *</label>
+          <ng-select id="tipo_servicios_id" formControlName="tipo_servicios_id" [ngClass]="{ 'is-invalid': form.tipo_servicios_id.errors && (form.tipo_servicios_id.dirty || form.tipo_servicios_id.touched || submitted) }">
+            <ng-option [value]="''">{{'FORMS.FIELD_NAMES.category.default_option' | translate}}</ng-option>
+            <ng-option *ngFor="let service of listServices" [value]="service.id">{{service.nombre}}</ng-option>
+          </ng-select>
+          <div *ngIf="form.tipo_servicios_id.errors && (form.tipo_servicios_id.dirty || form.tipo_servicios_id.touched || submitted)" class="invalid-feedback" align="left">
+            <div *ngIf="form.tipo_servicios_id.errors.required">
+              {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
+            </div>
+            <div *ngIf="form.tipo_servicios_id.errors.min">
+              {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.tipo_servicios_id.errors.min.requiredLength}}
+            </div>
           </div>
         </div>
       </div>
+      <div class="mb-3" *ngIf="'FORMS.FIELD_NAMES.brand.label' | translate as translatedLabel;">
+        <label for="marcas_id" class="form-label">{{translatedLabel}}</label>
+        <ng-select id="marcas_id" formControlName="marcas_id" [ngClass]="{ 'is-invalid': form.marcas_id.errors && (form.marcas_id.dirty || form.marcas_id.touched || submitted) }">
+          <ng-option [value]="''">{{'FORMS.FIELD_NAMES.brand.default_option' | translate}}</ng-option>
+          <ng-option *ngFor="let brand of listBrands" [value]="brand.id">{{brand.nombre}}</ng-option>
+        </ng-select>
+        <div *ngIf="form.marcas_id.errors && (form.marcas_id.dirty || form.marcas_id.touched || submitted)" class="invalid-feedback" align="left">
+          <div *ngIf="form.marcas_id.errors.required">
+            {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
+          </div>
+          <div *ngIf="form.marcas_id.errors.min">
+            {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.marcas_id.errors.min.requiredLength}}
+          </div>
+        </div>
+      </div>
+     
       <div class="mb-3" *ngIf="'FORMS.FIELD_NAMES.name.label' | translate as translatedLabel;">
         <label for="nombre" class="form-label">{{translatedLabel}} *</label>
         <input type="text" id="nombre" class="form-control" placeholder="{{'FORMS.FIELD_NAMES.name.placeholder' | translate}}" formControlName="nombre" [ngClass]="{ 'is-invalid': form['nombre'].errors && (form.nombre.dirty || form.nombre.touched || submitted) }" />
@@ -142,7 +164,6 @@
           </div>
         </div>
       </div>
-
       <div class="mb-3" *ngIf="'FORMS.FIELD_NAMES.description.label' | translate as translatedLabel;">
         <label for="descripcion" class="form-label">{{translatedLabel}}</label>
         <textarea id="descripcion" class="form-control" placeholder="{{'FORMS.FIELD_NAMES.description.placeholder' | translate}}" formControlName="descripcion" [ngClass]="{ 'is-invalid': form['descripcion'].errors && (form.descripcion.dirty || form.descripcion.touched || submitted)}"></textarea>
@@ -152,10 +173,19 @@
           </div>
         </div>
       </div>
+      <div class="mb-3" *ngIf="'FORMS.FIELD_NAMES.is_private.label' | translate as translatedLabel;">
+        <label for="is_private" class="form-label w-100">{{translatedLabel}}</label>
+        <ui-switch id="is_private" name="is_private" color="#556ee6" formControlName="is_private" uncheckedLabel="No" checkedLabel="Si" size="small" class="me-1 w-100"></ui-switch>
+      </div>
+
       <div class="row g-2">
-        <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.type_discount.label' | translate as translatedLabel;">
+        <div class="col-md-4 mb-3" *ngIf="'FORMS.FIELD_NAMES.show_discount.label' | translate as translatedLabel;">
+          <label for="show_discount" class="form-label w-100">¿{{translatedLabel}}?</label>
+          <ui-switch id="show_discount" name="show_discount" color="#556ee6" [(ngModel)]="showDiscount" formControlName="show_discount" uncheckedLabel="No" checkedLabel="Si" size="small" class="me-1 w-100"></ui-switch>
+        </div>
+        <div class="col-lg mb-3" [ngClass]="{'col-lg-8': showDiscount}" *ngIf="showDiscount && 'FORMS.FIELD_NAMES.type_discount.label' | translate as translatedLabel;">
           <label for="tipo_descuento" class="form-label">{{translatedLabel}}</label>
-          <select class="form-select custom-select" id="tipo_descuento" formControlName="tipo_descuento" [ngClass]="{ 'is-invalid': form.tipo_descuento.errors && (form.tipo_descuento.dirty || form.tipo_descuento.touched || submitted) }">
+          <select class="form-select custom-select" id="tipo_descuento" (change)="onChangeTypeDiscount($event.target.value)" formControlName="tipo_descuento" [ngClass]="{ 'is-invalid': form.tipo_descuento.errors && (form.tipo_descuento.dirty || form.tipo_descuento.touched || submitted) }">
             <option value="">{{'FORMS.FIELD_NAMES.type_discount.default_option' | translate}}</option>
             <option value="C">Cantidad</option>
             <option value="P">Porcentual</option>
@@ -169,7 +199,22 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.discount.label' | translate as translatedLabel;">
+        <div class="col-md-6 col-lg mb-3" *ngIf="promotionForm.get('tipo_descuento').value == 'C' && showDiscount && 'FORMS.FIELD_NAMES.type_currency.label' | translate as translatedLabel;">
+          <label for="tipo_monedas_id" class="form-label">{{translatedLabel}} *</label>
+          <ng-select id="tipo_monedas_id" formControlName="tipo_monedas_id" [ngClass]="{ 'is-invalid': form.tipo_monedas_id.errors && (form.tipo_monedas_id.dirty || form.tipo_monedas_id.touched || submitted) }">
+            <ng-option [value]="''">{{'FORMS.FIELD_NAMES.type_currency.default_option' | translate}}</ng-option>
+            <ng-option *ngFor="let currency of listCurrencies" [value]="currency.id">{{currency.nombre}}</ng-option>
+          </ng-select>
+          <div *ngIf="form.tipo_monedas_id.errors && (form.tipo_monedas_id.dirty || form.tipo_monedas_id.touched || submitted)" class="invalid-feedback" align="left">
+            <div *ngIf="form.tipo_monedas_id.errors.required">
+              {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
+            </div>
+            <div *ngIf="form.tipo_monedas_id.errors.min">
+              {{'FORMS.VALIDATION.min' | translate | replaceAttribute: ':attribute': translatedLabel | replaceAttribute: ':min': form.tipo_monedas_id.errors.min.requiredLength}}
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg mb-3" *ngIf="showDiscount && 'FORMS.FIELD_NAMES.discount.label' | translate as translatedLabel;">
           <label for="descuento" class="form-label">{{translatedLabel}}</label>
           <input type="text" id="descuento" class="form-control" placeholder="{{'FORMS.FIELD_NAMES.discount.placeholder' | translate}}" formControlName="descuento" [ngClass]="{ 'is-invalid': form.descuento.errors && (form.descuento.dirty || form.descuento.touched || submitted) }" />
           <div *ngIf="form.descuento.errors && (form.descuento.dirty || form.descuento.touched || submitted)" class="invalid-feedback" align="left">
@@ -183,7 +228,11 @@
         </div>
       </div>
       <div class="row g-2">
-        <div class="col-md-4 mb-3" *ngIf="'FORMS.FIELD_NAMES.code.label' | translate as translatedLabel;">
+        <div class="col-md-4 mb-3" *ngIf="'FORMS.FIELD_NAMES.show_code_min_max.label' | translate as translatedLabel;">
+          <label for="show_code_min_max" class="form-label w-100">¿{{translatedLabel}}?</label>
+          <ui-switch id="show_code_min_max" name="show_code_min_max" color="#556ee6" [(ngModel)]="showCodeMinMax" formControlName="show_code_min_max" uncheckedLabel="No" checkedLabel="Si" size="small" class="me-1 w-100"></ui-switch>
+        </div>
+        <div class="col-md-4 mb-3" *ngIf="showCodeMinMax && 'FORMS.FIELD_NAMES.code.label' | translate as translatedLabel;">
           <label for="codigo" class="form-label">{{translatedLabel}}</label>
           <input type="text" id="codigo" class="form-control" maxlength="15" placeholder="{{'FORMS.FIELD_NAMES.code.placeholder' | translate}}" formControlName="codigo" [ngClass]="{ 'is-invalid': form.codigo.errors && (form.codigo.dirty || form.codigo.touched || submitted) }" />
           <div *ngIf="form.codigo.errors && (form.codigo.dirty || form.codigo.touched || submitted)" class="invalid-feedback" align="left">
@@ -192,7 +241,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-3" *ngIf="'FORMS.FIELD_NAMES.count_min.label' | translate as translatedLabel;">
+        <div class="col-md-4 mb-3" *ngIf="showCodeMinMax && 'FORMS.FIELD_NAMES.count_min.label' | translate as translatedLabel;">
           <label for="cantidad_minima" class="form-label">{{translatedLabel}}</label>
           <input type="text" id="cantidad_minima" class="form-control" placeholder="{{'FORMS.FIELD_NAMES.count_min.placeholder' | translate}}" formControlName="cantidad_minima" [ngClass]="{ 'is-invalid': form.cantidad_minima.errors && (form.cantidad_minima.dirty || form.cantidad_minima.touched || submitted) }" />
           <div *ngIf="form.cantidad_minima.errors && (form.cantidad_minima.dirty || form.cantidad_minima.touched || submitted)" class="invalid-feedback" align="left">
@@ -201,7 +250,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-3" *ngIf="'FORMS.FIELD_NAMES.count_max.label' | translate as translatedLabel;">
+        <div class="col-md-4 col-lg mb-3" *ngIf="showCodeMinMax && 'FORMS.FIELD_NAMES.count_max.label' | translate as translatedLabel;">
           <label for="cantidad_maxima" class="form-label">{{translatedLabel}}</label>
           <input type="text" id="cantidad_maxima" class="form-control" placeholder="{{'FORMS.FIELD_NAMES.count_max.placeholder' | translate}}" formControlName="cantidad_maxima" [ngClass]="{ 'is-invalid': form.cantidad_maxima.errors && (form.cantidad_maxima.dirty || form.cantidad_maxima.touched || submitted) }" />
           <div *ngIf="form.cantidad_maxima.errors && (form.cantidad_maxima.dirty || form.cantidad_maxima.touched || submitted)" class="invalid-feedback" align="left">
@@ -212,7 +261,11 @@
         </div>
       </div>
       <div class="row g-2">
-        <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.first_date.label' | translate as translatedLabel;">
+        <div class="col-md mb-3" *ngIf="'FORMS.FIELD_NAMES.show_dates.label' | translate as translatedLabel;">
+          <label for="show_dates" class="form-label w-100">¿{{translatedLabel}}?</label>
+          <ui-switch id="show_dates" name="show_dates" color="#556ee6" [(ngModel)]="showDates" formControlName="show_dates" uncheckedLabel="No" checkedLabel="Si" size="small" class="me-1 w-100"></ui-switch>
+        </div>
+        <div class="col-md-4 mb-3" *ngIf="showDates && 'FORMS.FIELD_NAMES.first_date.label' | translate as translatedLabel;">
           <label for="fecha_inicio" class="form-label">{{translatedLabel}} *</label>
           <input type="date" id="fecha_inicio" class="form-control" placeholder="{{'FORMS.FIELD_NAMES.first_date.placeholder' | translate}}" formControlName="fecha_inicio" [ngClass]="{ 'is-invalid': form.fecha_inicio.errors && (form.fecha_inicio.dirty || form.fecha_inicio.touched || submitted) }" />
           <div *ngIf="form.fecha_inicio.errors && (form.fecha_inicio.dirty || form.fecha_inicio.touched || submitted)" class="invalid-feedback" align="left">
@@ -221,7 +274,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.last_date.label' | translate as translatedLabel;">
+        <div class="col-md-4 mb-3" *ngIf="showDates && 'FORMS.FIELD_NAMES.last_date.label' | translate as translatedLabel;">
           <label for="fecha_fin" class="form-label">{{translatedLabel}}</label>
           <input type="date" id="fecha_fin" class="form-control" placeholder="{{'FORMS.FIELD_NAMES.last_date.placeholder' | translate}}" formControlName="fecha_fin" [ngClass]="{ 'is-invalid': form.fecha_fin.errors && (form.fecha_fin.dirty || form.fecha_fin.touched || submitted) }" />
           <div *ngIf="form.fecha_fin.errors && (form.fecha_fin.dirty || form.fecha_fin.touched || submitted)" class="invalid-feedback" align="left">
@@ -230,8 +283,7 @@
             </div>
           </div>
         </div>
-      </div>
-     
+      </div>     
     </div>
     <div class="modal-footer">
       <div class="hstack gap-2 justify-content-end">
