--- a/src/app/pages/sale/forms/form-sale-detail-full/form-sale-detail-full.component.html
+++ b/src/app/pages/sale/forms/form-sale-detail-full/form-sale-detail-full.component.html
@@ -45,7 +45,10 @@
 
 <div class="card card-body border border-success" *ngIf="showFormService">
   <div class="">
-    <strong class="text-success text-uppercase mb-3 w-100 d-block font-size-16">Formulario - {{typeServiceNombre}}</strong>
+    <div class="d-flex justify-content-between align-items-center flex-wrap gap-2 mb-3">
+      <strong class="text-success text-uppercase font-size-16">Formulario - {{typeServiceNombre}}</strong>
+      <button type="button" (click)="onCancel()" class="btn btn-light rounded-pill"><i class="mdi mdi-close me-1"></i> {{'FORMS.BUTTONS.CLOSE' | translate}}</button>
+    </div>
     <app-form-sale-detail (cancel)="onCancel($event)" [typeService]="shareTypeService"></app-form-sale-detail>
   </div>
 </div>
