--- a/src/app/pages/sale/forms/form-sale-detail/form-sale-detail.component.html
+++ b/src/app/pages/sale/forms/form-sale-detail/form-sale-detail.component.html
@@ -8,6 +8,44 @@
 
 <form (keydown.enter)="$event.preventDefault()" [formGroup]="saleDetailForm" autocomplete="off">
   <div class="row g-2">
+    <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.product.label' | translate as translatedLabel;">
+      <label for="productos_id" class="form-label">{{translatedLabel}} *</label>
+      <ng-select 
+          id="productos_id" [ngClass]="{ 'is-invalid': f.productos_id.errors && (f.productos_id.dirty || f.productos_id.touched || submitted) }"
+          [items]="listProducts"
+          [bindValue]="'id'"
+          [bindLabel]="'nombre'"
+          [multiple]="false"
+          formControlName="productos_id">
+      </ng-select>
+              <!-- (change)="onSelectUbigeo($event)"
+              (search)="searchOptionUbigeo($event.term)"> -->
+      <div *ngIf="f.productos_id.errors && (f.productos_id.dirty || f.productos_id.touched || submitted)" class="invalid-feedback" align="left">
+        <div *ngIf="f.productos_id.errors.required">
+          {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 mb-3" *ngIf="'FORMS.FIELD_NAMES.promotion.label' | translate as translatedLabel;">
+      <label for="productos_id" class="form-label">{{translatedLabel}} *</label>
+      <ng-select 
+          id="promociones_id" [ngClass]="{ 'is-invalid': f.promociones_id.errors && (f.promociones_id.dirty || f.promociones_id.touched || submitted) }"
+          [items]="listPromotions"
+          [bindValue]="'id'"
+          [bindLabel]="'nombre'"
+          [multiple]="false"
+          formControlName="promociones_id">
+      </ng-select>
+              <!-- (change)="onSelectUbigeo($event)"
+              (search)="searchOptionUbigeo($event.term)"> -->
+      <div *ngIf="f.promociones_id.errors && (f.promociones_id.dirty || f.promociones_id.touched || submitted)" class="invalid-feedback" align="left">
+        <div *ngIf="f.promociones_id.errors.required">
+          {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute': translatedLabel}}
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row g-2">
     <!-- <div class="col-md-3 mb-3" *ngIf="'FORMS.FIELD_NAMES.type_status.label' | translate as translatedLabel;">
       <label for="tipo_estados_id" class="form-label">{{translatedLabel}}</label>  
       <ng-select id="tipo_estados_id" formControlName="tipo_estados_id" [ngClass]="{ 'is-invalid': f.tipo_estados_id.errors && (f.tipo_estados_id.dirty || f.tipo_estados_id.touched || submitted) }">
