--- a/src/app/pages/sale/tables/table-sale-detail-full/table-sale-detail-full.component.html
+++ b/src/app/pages/sale/tables/table-sale-detail-full/table-sale-detail-full.component.html
@@ -1,25 +1,47 @@
 
 <accordion [isAnimated]="true" [closeOthers]="true">
   <accordion-panel heading="Instalaciones" [isOpen]="true" class="border rounded">
-    <div class="row gy-3">
+    <div class="row gy-2">
       <div class="col-lg-8">
         <div class="d-flex justify-content-start gap-2 flex-wrap mb-2"><strong>FECHA:</strong> <span>{{dataBasicPreview?.fecha}}</span></div>
-        <div class="d-flex justify-content-start align-items-center gap-2 flex-wrap mb-2"><strong>ID RETAIL X:</strong> <input type="text" class="form-control w-auto"></div>
+        <!-- <div class="d-flex justify-content-start align-items-center gap-2 flex-wrap mb-2"><strong>ID RETAIL X:</strong> <input type="text" class="form-control w-auto"></div>
         <div class="d-flex justify-content-start align-items-center gap-2 flex-wrap mb-2"><strong>ID SMART:</strong> <input type="text" class="form-control w-auto"></div>
-        <div class="d-flex justify-content-start align-items-center gap-2 flex-wrap mb-2"><strong>ID DIRECCIÓN SMART:</strong> <input type="text" class="form-control w-auto"></div>
+        <div class="d-flex justify-content-start align-items-center gap-2 flex-wrap mb-2"><strong>ID DIRECCIÓN SMART:</strong> <input type="text" class="form-control w-auto"></div> -->
         <!-- <div class="d-flex justify-content-start gap-2 flex-wrap mb-2"><strong>ID SMART:</strong> <span>{{dataBasicPreview?.smart_id}}</span></div>
         <div class="d-flex justify-content-start gap-2 flex-wrap mb-2"><strong>ID DIRECCIÓN SMART:</strong> <span>{{dataBasicPreview?.smart_address_id}}</span></div> -->
         <div class="d-flex justify-content-start gap-2 flex-wrap mb-2"><strong>DIRECCIÓN:</strong> <span>{{dataBasicPreview?.address}}</span></div>
+
+        <div class="row">
+          <div class="col-xl-4">
+            <div class="form-floating mb-2">
+              <input type="text" class="form-control" id="retailx_id" placeholder="ID RETAIL X:" value="">
+              <label for="retailx_id">ID RETAIL X:</label>
+            </div>
+            <div class="form-floating mb-2">
+              <input type="text" class="form-control" id="smart_id" placeholder="ID RETAIL X:" value="">
+              <label for="smart_id">ID SMART:</label>
+            </div>
+            <div class="form-floating mb-2">
+              <input type="text" class="form-control" id="smart_address_id" placeholder="ID RETAIL X:" value="">
+              <label for="smart_address_id">ID DIRECCIÓN SMART:</label>
+            </div>
+          </div>
+        </div>
+
       </div>      
       <div class="col-lg-4">
-        <div class="w-100" *ngIf="'FORMS.FIELD_NAMES.brand.label' | translate as translatedLabel;">
-          <label for="" class="form-label text-primary">{{translatedLabel}} ({{'FORMS.FIELD_NAMES.bell.label' | translate}})</label>
+        <div class="w-100 mb-3" *ngIf="'FORMS.FIELD_NAMES.brand.label' | translate as translatedLabel;">
+          <label for="" class="form-label fw-bold text-primary">{{translatedLabel}} ({{'FORMS.FIELD_NAMES.bell.label' | translate}})</label>
           <ng-select [(ngModel)]="brandId" (change)="onChangeBrand($event)"
             [notFoundText]="'No se encontraron elementos'">
             <ng-option [value]="''">{{'FORMS.FIELD_NAMES.brand.default_option_all' | translate}}</ng-option>
             <ng-option *ngFor="let brand of listBrand"
               [value]="brand.id">{{brand.nombre}}</ng-option>
           </ng-select>
+        </div>
+        <div class="w-100 mb-3" *ngIf="'FORMS.FIELD_NAMES.product_type.label' | translate as translatedLabel;">
+          <label for="is_info_producto" class="form-label fw-bold w-100">{{translatedLabel}}</label>
+          <ui-switch id="is_info_producto" disabled="true" name="is_info_producto" color="#556ee6" [(ngModel)]="isInfoProduct" (change)="onChangeTypeProduct($event)" uncheckedLabel="Producto" checkedLabel="Servicio" size="small" class="me-1 w-100"></ui-switch>
         </div>
       </div>
     </div>
